--- a/wcmel/src/css/style.css
+++ b/wcmel/src/css/style.css
@@ -1,3 +1,6 @@
+/*******************************************************************/
+/*********************     Global settings      *********************/
+/*******************************************************************/
 * {
     padding : 0;
     margin : 0;
@@ -9,18 +12,34 @@
 /*******************************************************************/
 
 
-.header {
+.topbar {
 border : 1px solid red;
+width : 80%;
+margin: 0 auto ;
+height : 10%;
+background-color: #dfcfcf;
 }
 
-.header ul {
+.topbar ul {
 list-style: none;
+border : 2px solid yellow;
+overflow: hidden;
+width : 80%;
+margin: 0 auto ;
 }
 
-.header li{
+.topbar li{
+    display: block;
     float : left;
     margin : 2%;
     padding : 5px;
     border : 1px solid red;
-    border-radius: 20px;
+    border-radius: 3px;
+}
+.topbar li a{
+text-decoration: none;
+}
+
+.topbar li:hover{
+    background-color: #c56b6b;
 }
