--- a/wcmel/src/css/style.css
+++ b/wcmel/src/css/style.css
@@ -7,25 +7,34 @@
     box-sizing : border-box;
 }
 
+a {
+    text-decoration: none
+}
+
 /*******************************************************************/
-/*********************     HEADER SECTION      *********************/
+/*********************     MAIN FULL PAGE      *********************/
 /*******************************************************************/
 
 
 .topbar {
-border : 1px solid red;
-width : 80%;
-margin: 0 auto ;
-height : 10%;
+border : 2px solid red;
+width : 98%;
+margin: 10px auto 0 auto ;
 background-color: #dfcfcf;
+height : 98vh;
 }
+
+/*******************************************************************/
+/*********************     TOP BAR      *********************/
+/*******************************************************************/
 
 .topbar ul {
 list-style: none;
 border : 2px solid yellow;
-overflow: hidden;
+border-radius: 3px;
 width : 80%;
 margin: 0 auto ;
+overflow: hidden;
 }
 
 .topbar li{
@@ -33,7 +42,7 @@ margin: 0 auto ;
     float : left;
     margin : 2%;
     padding : 5px;
-    border : 1px solid red;
+    border : 2px solid blue;
     border-radius: 3px;
 }
 .topbar li Link{
@@ -43,3 +52,7 @@ text-decoration: none;
 .topbar li:hover{
     background-color: #c56b6b;
 }
+
+/*******************************************************************/
+/*********************     TOP BAR      *********************/
+/*******************************************************************/
