--- a/wcmel/src/css/style.css
+++ b/wcmel/src/css/style.css
@@ -20,7 +20,7 @@ a {
 border : 2px solid red;
 width : 98%;
 margin: 10px auto 0 auto ;
-background-color: #dfcfcf;
+background-color: #f0e9e9;
 height : 98vh;
 }
 
@@ -30,16 +30,16 @@ height : 98vh;
 
 .topbar ul {
 list-style: none;
-border : 2px solid yellow;
+border : 2px solid pink;
 border-radius: 3px;
 width : 80%;
 margin: 0 auto ;
-overflow: hidden;
+/* overflow: hidden; */
 }
 
 .topbar li{
-    display: block;
-    float : left;
+    display: inline;
+    /* float : left; */
     margin : 2%;
     padding : 5px;
     border : 2px solid blue;
@@ -53,6 +53,63 @@ text-decoration: none;
     background-color: #c56b6b;
 }
 
+.dropdown {
+    position:relative;
+    display:inline-block;   
+}
+
+.dropdownbtn{
+    background-color: #4CAF50;
+    color : white;
+    padding : 5px;
+    font-size: 16px;
+    border: none;
+    cursor:pointer;
+}
+
+.dropdownbtncontent{
+display:none;
+position: absolute;
+background-color: #f9f9f9;
+min-width:160px;
+z-index: 1;
+overflow-y: visible;
+}
+
+.dropdownbtncontent a{
+display: block;
+color : black;
+padding: 12px 16px;
+}
+
+.dropdownbtncontent a:hover{
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdownbtncontent{
+    display: block;
+}
+
+.dropdown:hover .dropdownbtn {
+    background-color: #3e8e41;
+}
+
 /*******************************************************************/
-/*********************     TOP BAR      *********************/
+/*********************     HOME PAGE        *********************/
 /*******************************************************************/
+.homepage
+{
+    margin: 1% 1%;
+}
+
+/*******************************************************************/
+/*********************     MENU PAGE 1      *********************/
+/*******************************************************************/
+
+/*******************************************************************/
+/*********************     MENU PAGE 2      *********************/
+/*******************************************************************/
+
+
+
+
