--- a/wcmel/src/css/style.css
+++ b/wcmel/src/css/style.css
@@ -16,82 +16,12 @@ a {
 /*******************************************************************/
 
 
-.topbar {
+.fullpage {
 border : 2px solid red;
 width : 98%;
 margin: 10px auto 0 auto ;
 background-color: #f0e9e9;
 height : 98vh;
-}
-
-/*******************************************************************/
-/*********************     TOP BAR      *********************/
-/*******************************************************************/
-
-.topbar ul {
-list-style: none;
-border : 2px solid pink;
-border-radius: 3px;
-width : 80%;
-margin: 0 auto ;
-/* overflow: hidden; */
-}
-
-.topbar li{
-    display: inline;
-    /* float : left; */
-    margin : 2%;
-    padding : 5px;
-    border : 2px solid blue;
-    border-radius: 3px;
-}
-.topbar li Link{
-text-decoration: none;
-}
-
-.topbar li:hover{
-    background-color: #c56b6b;
-}
-
-.dropdown {
-    position:relative;
-    display:inline-block;   
-}
-
-.dropdownbtn{
-    background-color: #4CAF50;
-    color : white;
-    padding : 5px;
-    font-size: 16px;
-    border: none;
-    cursor:pointer;
-}
-
-.dropdownbtncontent{
-display:none;
-position: absolute;
-background-color: #f9f9f9;
-min-width:160px;
-z-index: 1;
-overflow-y: visible;
-}
-
-.dropdownbtncontent a{
-display: block;
-color : black;
-padding: 12px 16px;
-}
-
-.dropdownbtncontent a:hover{
-    background-color: #f1f1f1;
-}
-
-.dropdown:hover .dropdownbtncontent{
-    display: block;
-}
-
-.dropdown:hover .dropdownbtn {
-    background-color: #3e8e41;
 }
 
 /*******************************************************************/
@@ -102,6 +32,67 @@ padding: 12px 16px;
     margin: 1% 1%;
 }
 
+/*******************************************************************/
+/*********************     TOP BAR      *********************/
+/*******************************************************************/
+.topbar {
+    /* border: 1px solid blue; */
+    }
+
+.ulsection
+{
+    width : 100%;
+    height:100%
+}    
+
+.ulsection ul{
+    list-style: none;
+    /* border: 2px solid blue; */
+    padding : 0;
+}
+
+.ulsection ul>li{
+    display: inline-block;
+    border: 1px solid red;
+    padding: 10px;
+    margin : 2% 5%;
+}
+
+.ulsection ul>li:hover{
+    background-color: cadetblue;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    position : absolute;
+    display: none;
+    background-color: #f9f9f9; 
+    min-width: 120px;
+    /* box-shadow: 0px 8px 0 16px rgb(0,0,0,0.5); */
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px; 
+    text-decoration: none;
+    display: block;
+    border : 1px solid grey; 
+    border-radius: 5px;
+    padding-bottom: 1px;
+  }
+
+ /* a:hover{
+    background-color: #f1f1f1;
+  } */
+
+.ulsection ul li:last-child:hover   .dropdown-content {
+display:block;
+}
+
+.ulsection ul li:last-child:hover .ulsection ul li:last-child{
+    background-color: #3e8e41;
+}
 /*******************************************************************/
 /*********************     MENU PAGE 1      *********************/
 /*******************************************************************/
