--- a/wcmel/src/css/style.css
+++ b/wcmel/src/css/style.css
@@ -19,9 +19,9 @@ a {
 .fullpage {
 border : 2px solid red;
 width : 98%;
-margin: 10px auto 0 auto ;
+margin: 5px auto 0 auto ;
 background-color: #f0e9e9;
-height : 98vh;
+height : 99%;
 }
 
 /*******************************************************************/
@@ -35,20 +35,21 @@ height : 98vh;
 /*******************************************************************/
 /*********************     TOP BAR      *********************/
 /*******************************************************************/
-.topbar {
-    /* border: 1px solid blue; */
-}
+/* .topbar {
+     border: 1px solid blue;
+} */
 
 .badge {
 font-size: 30px;
 text-align: right;
 padding : 1px 2px;
 margin-right: 2px;
+color : grey;
+display:none;
 }
 
 .badge:hover{
-    border:1px solid red;
-    background-color: #cfe0d0;
+cursor: pointer;
 }
 
 .ulsection
@@ -59,18 +60,18 @@ margin-right: 2px;
 
 .ulsection ul{
     list-style: none;
-    border: 2px solid blue; 
+    /* border: 2px solid blue;  */
     padding : 0;
 }
 
-.ulsection ul>li{
+.ulsection ul li{
     display: inline-block;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     padding: 10px;
     margin : 2% 5%;
 }
 
-.ulsection ul>li:hover{
+.ulsection ul li:hover{
     background-color: cadetblue;
     cursor: pointer;
 }
@@ -89,14 +90,14 @@ margin-right: 2px;
     padding: 12px 16px; 
     text-decoration: none;
     display: block;
-    border : 1px solid grey; 
+    /* border : 1px solid grey;  */
     border-radius: 5px;
     padding-bottom: 1px;
   }
 
-  a:hover{
+  /* a:hover{
     background-color: #f1f1f1;
-  } 
+  }  */
 
 .ulsection ul li:last-child:hover  .dropdown-content {
 display:block;
@@ -105,6 +106,7 @@ display:block;
 .ulsection ul li:last-child:hover .ulsection ul li:last-child{
     background-color: #3e8e41;
 }
+
 /*******************************************************************/
 /*********************     MENU PAGE 1      *********************/
 /*******************************************************************/
@@ -114,5 +116,28 @@ display:block;
 /*******************************************************************/
 
 
+/*******************************************************************/
+/*********************     MEDIA QUERIES      *********************/
+/*******************************************************************/
 
-
+@media screen and (max-width:768px)
+{
+    .badge {    
+        display: block;
+    }
+    .ulsection ul {
+        width: 100%;
+        /* display: block; */
+    }
+    .ulsection ul li {
+        display: block;
+        text-align: center;
+    }
+    .active {
+        display:block;
+    }
+    .inactive{
+        display:none
+    }
+}
+ 
